syntax = "proto3";

option csharp_namespace = "Menu.Grpc";

package menu;

service MenuProtoService {
  rpc GetMenu (GetMenuRequest) returns (MenuModel);
  rpc GetAllMenu (GetAllMenuRequest) returns (GetAllMenuResponse);
  rpc CreateMenu (CreateMenuRequest) returns (MenuModel);
  rpc UpdateMenu (UpdateMenuRequest) returns (MenuModel);
  rpc ActiveMenu (ActiveMenuRequest) returns (ActiveMenuResponse);
  rpc DeActiveMenu (ActiveMenuRequest) returns (ActiveMenuResponse);
}


message MenuModel {
  string name = 2;
  string ApiRoute = 3;
  string UrlFront = 4;
  string Icon = 5;
  string AppAdminId = 6; 
}

// ---- Requêtes ----
message GetAllMenuRequest {
	
}

message GetMenuRequest {
  string name = 1;
}

message CreateMenuRequest {
  MenuModel menu = 1; 
}

message UpdateMenuRequest {
  MenuModel menu = 1; 
}

message ActiveMenuRequest {
  string reference = 1;
}

// ---- Réponses ----
message GetAllMenuResponse {
  repeated MenuModel menus = 1;
}

message ActiveMenuResponse {
  bool success = 1;
}
